2006-09-20  Jb Evain  <jbevain@gmail.com>

	* implement somes bits of the writing stuff.

2006-09-19  Jb Evain  <jbevain@gmail.com>

	* first checkin in SVN:
		This is the assembly to support reading and writing
		from Microsoft's pdb symbols store.

		It will only work on Windows until Microsoft release
		the spec for the pdb files.